--- a/Athleticum/Athleticum.Common.Helpers/Athleticum.Common.Helpers.csproj
+++ b/Athleticum/Athleticum.Common.Helpers/Athleticum.Common.Helpers.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="Initializers\" />
+    <Folder Include="Factories\" />
     <Folder Include="Wrappers\" />
   </ItemGroup>
 
