--- a/Athleticum.Operations/Athleticum.Common.Operations.csproj
+++ b/Athleticum.Operations/Athleticum.Common.Operations.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Athleticum.ServiceAgents\Athleticum.ServiceAgents.csproj" />
+  </ItemGroup>
+
 </Project>
